--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,14 +1,30 @@
-name: "Subscription API Newman Tests"
-on: [push, pull_request]
+#Name of the GitHub Action
+name: Test-Build
 
+#Set the action on which the workflow will trigger
+on:
+ push:
+   branches:
+     - master
 jobs:
-  build:
+  test-api:
     runs-on: ubuntu-latest
-    container: 
-      image: postman/newman
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+    #Checkout the repository
+    - name: Checkout Repository
+      uses: actions/checkout@master
+      # Install Node.js environment
+    - name: set up node
+      uses: actions/setup-node@v1
+      with:
+          node-version: '12.x'
 
-      - name: Run API Tests
-        run: newman run "Subscription API.postman_collection.json" -e "New Prod Subscription API UI.postman_environment.json" # also test 3 other envs
+# Install newman
+    - name: Install newman
+      run: | 
+       npm install -g newman
+       npm install -g newman-reporter-htmlextra
+    - name: Run POSTMAN collection
+      run: |
+       newman run "Subscription API.postman_collection.json" -e "New Prod Subscription API.postman_environment.json" --verbose
+       
